# perspective_kb

./: .gitattributes  .gitignore  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  QUICK_START.md  README.md  README_2025.md  USAGE.md  WINDOWS_DEPLOYMENT.md  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.windows.yml  env.example  milvus_lite.db  pyproject.toml  requirements.txt  start-local.sh  start-windows.bat  test_system.py
data/canonical_perspectives/: 价格.json  内饰.json  动力.json  售后服务.json  噪音.json  外观.json  油耗.json  空间.json
data/feedback_raw/: 价格.json  价格.json.template
data/perspective_dictionary/: 价格.json  价格.json.template
data/processed/: canonical_perspectives.json  feedback_corpus.json  perspective_dictionary.json  processing_stats.json  user_feedback_corpus.json  标准观点库.json.template  用户语料库.json.template
data/user_feedbacks/: 价格.json  内饰.json  动力.json  售后服务.json  噪音.json  外观.json  油耗.json  空间.json
embeddings/.ollama/: id_ed25519  id_ed25519.pub
embeddings/.ollama/models/blobs/: sha256-9202febed9e2dadac14bca089be90864571336fa9f4375b690a26ed548957fde
embeddings/.ollama/models/manifests/registry.ollama.ai/mitoza/Qwen3-Embedding-0.6B/: latest
scripts/: docker-start.bat  docker-start.ps1  docker-start.sh  start-windows.bat  start-windows.ps1  start_ollama.ps1  start_ollama.sh  stop-windows.bat
src/: example.py  main.py  perspective_kb_cli.py
src/perspective_kb/: __init__.py  cli.py  config.py  data_helper.py  utils.py  vector_db.py
tests/: test_basic.py
wheels/: pymilvus-2.6.0-py3-none-any.whl
