[project]
authors = [{ name = "Abyteon", email = "bai.tn@icloud.com" }]
dependencies = [
    "pymilvus>=2.6.0",
    "ollama>=0.5.3",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "structlog>=24.1.0",
    "rich>=14.0.0",
    "typer>=0.12.0",
    "click>=8.1.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0"
]
name = "perspective_kb"
requires-python = ">= 3.11"
version = "0.1.0"
description = "基于向量数据库的视角知识库系统"
readme = "README.md"
keywords = ["vector-database", "knowledge-base", "nlp", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=4.0.0"
]
notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.4.6",
    "ipywidgets>=8.0.0"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "pypi"]
platforms = ["osx-arm64", "win-64", "linux-64"]

[tool.hatch.build.targets.wheel]
packages = ["src/perspective_kb"]

[tool.pixi.pypi-dependencies]
ollama = { path = "./wheels/ollama-0.5.3-py3-none-any.whl" }
pymilvus = { path = "./wheels/pymilvus-2.6.0-py3-none-any.whl" }
perspective_kb = { path = ".", editable = true }

[tool.pixi.tasks]
notebook = { cmd = "jupyter lab" }
main = { cmd = "python -m src.main" }

[tool.pixi.dependencies]
python = "3.12.*"
jupyterlab = ">=4.4.6,<5"
setuptools = "74.*"
